# multi_database_manager

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  Dockerfile  README.md  cuccok.txt  docker-compose.yml  eslint.config.js  index.html  integrated_queries.md  metadata_queries.txt  package-lock.json  package.json  pnpm-lock.yaml  private_key.pem  public_key.pem  query_supports.md  query_supports_new.md  tailwind.config.cjs  tailwind.config.js  tasks.txt  test.asm  tsconfig.json  vite.config.ts
public/: chinook.db  (+2 more)
src-tauri/: .gitignore  Cargo.toml  log4rs_conf.yaml  tasks_prior.txt  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: log4rs_conf.rs  mod.rs
src-tauri/src/create_info/: create_table_info.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/commands/: mod.rs  service_commands.rs
src-tauri/src/domain/create_info/: create_table_info.rs  mod.rs
src-tauri/src/domain/datb/: data_type_map.rs  database_type.rs  ddl_generate.rs  dml_generate.rs  migraton_config.rs  mod.rs  parse_procedure.rs  query_info.rs
src-tauri/src/domain/io/: filewrite.rs  mod.rs
src-tauri/src/domain/metadata/: aggregate.rs  catalog.rs  column.rs  constraint.rs  database.rs  database_metadata.rs  foreign_data_wrapper.rs  function.rs  index.rs  lock.rs  main.rs  materalized_view.rs  metadatanode.rs  mod.rs  parse_procedure.rs  procedure.rs  rls_policy.rs  role.rs  rule.rs  sequence.rs  table.rs  trigger.rs  user.rs  utype.rs  view.rs
src-tauri/src/domain/obfuscation/: mod.rs  obfuscate-stuffs.json  obfuscations.rs
src-tauri/src/domain/parser/: docx_parser.rs  md_parser.rs  mod.rs  rtf_parser.rs
src-tauri/src/domain/replace/: mod.rs  obfuscations.rs
src-tauri/src/domain/repository/: database_repository.rs  file_repository.rs  mod.rs  mssql_repository.rs  mysql_repository.rs  oracle_repository.rs  postgres_repository.rs  repository_type.rs  sqlite_repository.rs
src-tauri/src/domain/serializable/: mod.rs  response.rs  user_settings.rs
src-tauri/src/domain/service/: database_service.rs  mod.rs  mssql_service.rs  mysql_service.rs  oracle_service.rs  parser_service.rs  postgres_service.rs  sqlite_service.rs  sys_info_service.rs  system_service.rs  user_settings_service.rs
src-tauri/src/domain/util/: systeminfo.rs
src-tauri/src/metadata/: aggregate.rs  catalog.rs  column.rs  database.rs  foreign_data_wrapper.rs  lock.rs  mod.rs  procedure.rs  rls_policy.rs  role.rs  table.rs  trigger.rs  user.rs  view.rs
src-tauri/src/metadata/aggregate/: mod.rs
src-tauri/src/metadata/catalog/: mod.rs
src-tauri/src/metadata/column/: mod.rs
src-tauri/src/metadata/constraint/: mod.rs
src-tauri/src/metadata/database/: mod.rs
src-tauri/src/metadata/foreign_data_wrapper/: mod.rs
src-tauri/src/repository/: database_repository.rs  mod.rs  mssql_repository.rs  mysql_repository.rs  oracle_repository.rs  postgres_repository.rs  sqlite_repository.rs
src-tauri/src/service/: postgres_service.rs
(+184 files in other folders)
