[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
rbs = { version = "4.5"}
#rbdc = { version = "4.5", default-features = false,  optional = true }
rbdc = "4.5.35"
rbatis = { version = "4.5"}
rbdc-sqlite = { version = "4.5" }
rbdc-mysql= {version="4.5"}
rbdc-pg= {version="4.5"}
rbdc-mssql= {version="4.5"}
tauri = { version = "1.5    ", features = [ "updater", "api-all"] }
strum = "0.24"  # Check for the latest version on crates.io
strum_macros = "0.24"  # Check for the latest version on crates.io
fastdate = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
fast_log = "1.7.4"
rbdc-oracle = "0.6.0"
fast_pool = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
tls-rustls= ["rbdc/tls-rustls"]
tls-native-tls= ["rbdc/tls-native-tls"]
