[package]
name = "writepad"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "writepad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31.4"
log = "0.4.22"
log4rs = "1.3.0"
os_info = "3.8.2"
sys-locale = "0.3.1"
sys-info = "0.9.1"
winit = "0.29.1"
rtf-parser = "0.4.1"
font-loader = { git = "https://github.com/matprec/rust-font-loader" }
tauri-plugin-dialog = "2"
comrak = "0.28.0"
serde_yaml = "0.9.33"
dirs = "5.0.1"
chrono = "0.4.38"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.89"
clap = "4.5.19"
docx-rs = "0.4.17"
html-builder = "0.5.1"
build_html = "2.5.0"

fast_pool = "0.2.0"
dashmap = "5.4.0"
futures = "0.3.30"
regex = "1.9.6"
rand = "0.8.5"
strum = "0.24"  
strum_macros = "0.24" 
fastdate = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
rbs = { version = "4.5"}
rbdc = "4.5.35"
rbatis = { version = "4.5"}
rbdc-oracle = "0.6.0"
rbdc-sqlite = { version = "4.5" }
rbdc-mysql= {version="4.5"}
rbdc-pg= {version="4.5"}
rbdc-mssql= {version="4.5"}
tauri-plugin-store = "2.1.0"
tauri-dialog = "0.1.1"
tauri-plugin-fs = "2.2.0"
mockall = "0.13.1"
